debug-storybook.log
[13:51:03.231] [INFO] storybook v10.2.0
[13:51:03.317] [ERROR] [38;2;241;97;97mSB_CORE-SERVER_0007 (MainFileEvaluationError): Storybook couldn't evaluate your [33m.storybook/main.js[39m file.

Original error:
[37m/.storybook/main.js:17
export default config;
^^^^^^

SyntaxError: Unexpected token 'export'
    at wrapSafe (node:internal/modules/cjs/loader:1734:18)
    at Module._compile (node:internal/modules/cjs/loader:1777:20)
    at Object..js (node:internal/modules/cjs/loader:1934:10)
    at Module.load (node:internal/modules/cjs/loader:1524:32)
    at Module._load (node:internal/modules/cjs/loader:1326:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:245:24)
    at loadCJSModuleWithModuleLoad (node:internal/modules/esm/translators:338:3)
    at ModuleWrap.<anonymous> (node:internal/modules/esm/translators:241:7)
    at ModuleJob.run (node:internal/modules/esm/module_job:430:25)[39m[39m
    at loadMainConfig (file://./node_modules/storybook/dist/_node-chunks/chunk-6QCIDOPJ.js:11707:11)
    at async buildDevStandalone (file://./node_modules/storybook/dist/core-server/index.js:7518:16)
    at async withTelemetry (file://./node_modules/storybook/dist/_node-chunks/chunk-5T2PCIM6.js:218:12)
    at async dev (file://./node_modules/storybook/dist/bin/core.js:2734:3)
    at async _Command.<anonymous> (file://./node_modules/storybook/dist/bin/core.js:2801:92)
[13:51:03.320] [WARN] Broken build, fix the error above.
You may need to refresh the browser.
[13:51:03.322] [WARN]   Failed to load preset: "/Users/nt433/Projects/yale-ui-cl/.storybook/main.js"
[13:51:03.322] [ERROR] ./.storybook/main.js:17
export default config;
^^^^^^

[38;2;241;97;97mSyntaxError: Unexpected token 'export'[39m
    at wrapSafe (node:internal/modules/cjs/loader:1734:18)
    at Module._compile (node:internal/modules/cjs/loader:1777:20)
    at Object..js (node:internal/modules/cjs/loader:1934:10)
    at Module.load (node:internal/modules/cjs/loader:1524:32)
    at Module._load (node:internal/modules/cjs/loader:1326:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:245:24)
    at loadCJSModuleWithModuleLoad (node:internal/modules/esm/translators:338:3)
    at ModuleWrap.<anonymous> (node:internal/modules/esm/translators:241:7)
    at ModuleJob.run (node:internal/modules/esm/module_job:430:25)